# OpenGL-Engine

./: .gitignore  CMakeLists.txt  OpenGL.sln
include-ext/GLinclude/glad/: glad.h
lib-ext/: glfw3.lib
shaders/: tex2.frag  tex_mat.vert
shaders/old/: fragment.frag  tex_frag.frag  uni_frag.frag  vertex.vert
src/: CMakeLists.txt
src/Common/: CMakeLists.txt  Common.vcxproj  cmake_vars.cpp.in  cmake_vars.h  lifetime_shared_ptr.h  log.cpp  log.h  watcher.h
src/Common/map_funcs/: map_base.cpp  map_base.h  map_funcs.cpp
src/Engine/: CMakeLists.txt  OpenGL.vcxproj  OpenGL.vcxproj.filters  input_handler.cpp  input_handler.h  kbd_input_handler.cpp  main.cpp  window.cpp  window.h
src/Engine/definitions/: input_handler.cpp  input_handler.h  window.cpp  window.h
src/Engine/definitions/entities/: camera.cpp  camera.h  camera_helper.cpp  instance.cpp  instance.h  object.cpp  shapes.cpp
src/Engine/definitions/entities/meta/: avv_types.h
src/Engine/entities/: camera.cpp  camera.h  instance.cpp  instance.h  object.cpp  object.h  shapes.cpp  shapes.h
src/Engine/entities/meta/: avv_types.cpp  avv_types.h
src/GLCore/: CMakeLists.txt  GLCore.vcxproj  GLCore.vcxproj.filters  buffer_objects.h  glad.c  program.cpp  program.h  shader.cpp  shader.h
src/GLCore/base/: base.h  gl_math_defs.h
src/GLCore/buffer_objects/: ebo.cpp  ebo.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/GLCore/textures/: surface.cpp  surface.h  texture2D.cpp  texture2D.h  textureCube.cpp  textureCube.h
